feat: add deleteTodo operation
