# services/todo/server/server.go
@@ -26,10 +26,38 @@ func New(db model.DBTX) *TodoServer {
 }
 
 func (s *TodoServer) RegisterRoutes(router *httprouter.Router, errorMiddleware httperror.Middleware) {
+	router.Handler(http.MethodPost, "/api/v1/todo", errorMiddleware(s.Create))
 	router.Handler(http.MethodGet, "/api/v1/todo/:id", errorMiddleware(s.Get))
 	router.Handler(http.MethodGet, "/api/v1/todo", errorMiddleware(s.List))
-	router.Handler(http.MethodPost, "/api/v1/todo", errorMiddleware(s.Create))
+	router.Handler(http.MethodDelete, "/api/v1/todo/:id", errorMiddleware(s.Delete))
 	router.Handler(http.MethodDelete, "/api/v1/todo", errorMiddleware(s.DeleteAll))
+}
+
+func (s *TodoServer) Create(w http.ResponseWriter, req *http.Request) error {
+	ctx := req.Context()
+
+	var ctReq api.CreateTodoRequest
+	if err := routes.JSONRequestBody(req, &ctReq); err != nil {
+		return err
+	}
+
+	id, err := uuid.NewRandom()
+	if err != nil {
+		return fmt.Errorf("failed to generate todo id: %w", err)
+	}
+
+	err = s.queries.Create(ctx, model.CreateParams{
+		ID:      id,
+		Title:   ctReq.Title,
+		Content: ctReq.Content,
+	})
+	if err != nil {
+		return fmt.Errorf("failed to create todo: %w", err)
+	}
+
+	return routes.JSONResponseBody(w, http.StatusCreated, api.CreateTodoResponse{
+		Id: id,
+	})
 }
 
 func (s *TodoServer) Get(w http.ResponseWriter, req *http.Request) error {
@@ -46,7 +74,7 @@ func (s *TodoServer) Get(w http.ResponseWriter, req *http.Request) error {
 
 	switch {
 	case errors.Is(err, sql.ErrNoRows):
-		return httperror.New(http.StatusNotFound, httperror.Message("todo not found"))
+		return httperror.New(http.StatusNotFound, httperror.Messagef("todo %q not found", id))
 	case err != nil:
 		return fmt.Errorf("failed to get todo: %w", err)
 	}
@@ -78,31 +106,26 @@ func (s *TodoServer) List(w http.ResponseWriter, req *http.Request) error {
 	return routes.JSONResponseBody(w, http.StatusOK, resTodos)
 }
 
-func (s *TodoServer) Create(w http.ResponseWriter, req *http.Request) error {
+func (s *TodoServer) Delete(w http.ResponseWriter, req *http.Request) error {
 	ctx := req.Context()
 
-	var ctReq api.CreateTodoRequest
-	if err := routes.JSONRequestBody(req, &ctReq); err != nil {
-		return err
-	}
+	rawID := httprouter.ParamsFromContext(ctx).ByName("id")
 
-	id, err := uuid.NewRandom()
+	id, err := uuid.Parse(rawID)
 	if err != nil {
-		return fmt.Errorf("failed to generate todo id: %w", err)
+		return httperror.New(http.StatusBadRequest, httperror.Message("invalid id"), httperror.Cause(err))
 	}
 
-	err = s.queries.Create(ctx, model.CreateParams{
-		ID:      id,
-		Title:   ctReq.Title,
-		Content: ctReq.Content,
-	})
-	if err != nil {
-		return fmt.Errorf("failed to create todo: %w", err)
+	err = s.queries.Delete(ctx, id)
+	switch {
+	case errors.Is(err, sql.ErrNoRows):
+		return httperror.New(http.StatusNotFound, httperror.Messagef("todo %q not found", id))
+	case err != nil:
+		return fmt.Errorf("failed to get todo: %w", err)
+	default:
+		w.WriteHeader(http.StatusNoContent)
+		return nil
 	}
-
-	return routes.JSONResponseBody(w, http.StatusCreated, api.CreateTodoResponse{
-		Id: id,
-	})
 }
 
 func (s *TodoServer) DeleteAll(w http.ResponseWriter, req *http.Request) error {
